--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
 ::-webkit-scrollbar-thumb {
   background: #6b9fe4;
   border-radius: 100vh;
-  border: 3px solid #edf2f7;
+  border: 2px solid #ebecec;
 }
 
 /* Handle on hover */
